# timer-cli-rs

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  ReadMe.md
src/: main.rs
