[package]
name = "timer-cli-rs"
version = "1.2.3"
edition = "2024"
description = "A super lightweight and zero-dependency command-line countdown timer."
license = "MIT"
repository = "https://github.com/Andrew-McCall/timer-cli-rs"
readme = "ReadMe.md"
documentation = "https://github.com/Andrew-McCall/timer-cli-rs#readme"
categories = ["command-line-utilities", "development-tools", "date-and-time"]
keywords = ["timer", "countdown", "timer", "productivity", "utility"]

[dependencies]

[[bin]]
name = "timer"
path = "src/main.rs"
